--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xtypejs": "^0.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
